--- a/css/main.css
+++ b/css/main.css
@@ -34,4 +34,44 @@ body {
 .nav-list a:hover {
   color: #ffffff;
 }
-/* FINs HEADER */
+/* FIN HEADER */
+
+/* INICIO MAIN */
+.main {
+  width: 100%;
+  background-color: #000;
+  height: calc(100vh - 80px);
+  background-image: url("img/programador.png");
+  display: flex;
+  align-items: center;
+  padding-left: 10%;
+}
+
+.main h1 {
+  color: #ffffff;
+  font-size: 54px;
+}
+
+.main p {
+  font-size: 24px;
+  font-style: italic;
+  color: #1e96fc;
+  margin-top: 10px;
+  margin-bottom: 35px;
+}
+
+.call-to-action {
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 0;
+  padding: 14px;
+  border-radius: 4px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.main a {
+  text-decoration: none;
+  color: #181818;
+}
+/* FIN MAIN */
